--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                   <a class="nav-link text-white" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="http://127.0.0.1:5500/index.html#services">Services</a>
+                  <a class="nav-link text-white" href="https://swalih7999.netlify.app/index.html#services">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="http://127.0.0.1:5500/index.html#profile">Profile</a>
+                  <a class="nav-link text-white" href="https://swalih7999.netlify.app/index.html#profile">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="http://127.0.0.1:5500/index.html#contacts">Contact</a>
+                    <a class="nav-link text-white" href="https://swalih7999.netlify.app/index.html#contacts">Contact</a>
                   </li>
               </ul>
               </div>
